Fixed featured posts not centered if small

--- a/public_html/css/home.css
+++ b/public_html/css/home.css
@@ -12,6 +12,7 @@
 #home .post {
 	text-align: left;
 	margin: 0 auto;
+	display: inline-block;
 	max-width: 60%;
 }
 #home .post .left {
